Improve code generation and settings for creating Minecraft mods
Refactors code generation, adds configuration UI, and enhances thread management.

Replit-Commit-Author: Agent
Replit-Commit-Session-Id: 895baa03-324e-4ef8-a584-81c93868c22d
Replit-Commit-Screenshot-Url: https://storage.googleapis.com/screenshot-production-us-central1/5f8eb474-b074-4f79-908a-d445b6dba375/466e1946-e45f-463c-bc19-57074663ba7b.jpg